--- a/templates/index.html
+++ b/templates/index.html
@@ -59,6 +59,7 @@
                     {{ form.company_description(class="form-control", rows="3", placeholder="Brief description of your company") }}
                 </div>
 
+                <hr class="my-4">
                 <h5 class="mt-3 mb-2">Strategy Details</h5>
                 <hr class="my-2">
                 
